<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >
    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/spa" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow>

            <View android:layout_height="40dp" />

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="30dp"
                android:text="@string/txtTitle"
                android:textSize="30sp"
                android:typeface="serif" />

        </TableRow>

        <TableRow>

            <View android:layout_height="40dp" />

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="wrap_content"
                android:layout_gravity="left"
                android:padding="15dp"
                android:text="@string/txtDescription"
                android:textSize="18sp" />

        </TableRow>
        
        <TableRow
            android:layout_width="fill_parent"
            android:gravity="center" >

            <View android:layout_height="20dp" />

            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="fill_parent"
                android:layout_gravity="center"
                android:padding="15dp"
                android:text="@string/txtAddress"
                android:textSize="15sp" />

        </TableRow>
        
        <TableRow>

            <View android:layout_height="40dp" />

            <Button
                android:id="@+id/btnDate"
                android:layout_width="100dp"
                android:padding="20dp"
                android:text="@string/btnDate"
                android:textSize="16sp" >
            </Button>
        </TableRow>

        <TableRow>
            <View android:layout_height="40dp" />
            <TextView
                android:id="@+id/txtReservation"
                android:padding="20dp"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:text=""
                />
        </TableRow>
    </TableLayout>
</LinearLayout>